<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E9E9"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/assistance_card_background"
        android:padding="16dp"
        android:elevation="6dp">

        <!-- Settings Title -->
        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#E65C2C"
            android:layout_marginBottom="24dp" />

        <!-- Terms of Use Button -->
        <Button
            android:id="@+id/btnTermsOfService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_rounded_button"
            android:text="@string/termsofuse"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="16dp" />

        <!-- Privacy Policy Button -->
        <Button
            android:id="@+id/btnPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_rounded_button"
            android:text="@string/privacypolicy"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="16dp" />

        <!-- Delete Account Button -->
        <Button
            android:id="@+id/btnDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteaccount"
            android:textColor="#FFFFFF"
            android:backgroundTint="#FF4444"
            android:layout_marginBottom="16dp" />

    </LinearLayout>
</ScrollView>
